Change `text-width-readable` dimension due to issue in empty state in smaller areas.

--- a/src/css/text.scss
+++ b/src/css/text.scss
@@ -231,5 +231,4 @@ input, textarea {
 
 .text-width-readable {
     max-width: 65ch;
-    max-width: min(65ch, 80%);
 }
